package it.unisa.diem.oop.eccezioni;

public class AccessibileException extends Exception {
    public AccessibileException(){}

    public AccessibileException(String message) {
        super(message);
    }
}
