package it.unisa.diem.oop.eccezioni;

public class AccessibilePienoException extends AccessibileException{
    public AccessibilePienoException(){}

    public AccessibilePienoException(String message) {
        super(message);
    }
}
