package it.unisa.diem.oop.eccezioni;

public class AccessibileVuotoException extends AccessibileException {
    public AccessibileVuotoException(){}

    public AccessibileVuotoException(String message) {
        super(message);
    }
}
